####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsocket.a
AM_CPPFLAGS =  -I$(top_srcdir)/openssl/include/ -I$(top_srcdir)/include -I$(top_srcdir)/src
libsocket_a_METASOURCES = AUTO

libsocket_a_SOURCES = gsockaddr.cpp hostinfo.cpp tcpsockopt.cpp tcpserversocket.cpp tcpconnection.cpp \
		streamsocket.cpp serversocket.cpp coresocket.cpp 


####### kdevelop will overwrite this part!!! (end)############
