####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsslpp.a

AM_CPPFLAGS =  -I$(top_srcdir)/openssl/include/ -I$(top_srcdir)/include -I$(top_srcdir)/src
libsslpp_a_METASOURCES = AUTO

libsslpp_a_SOURCES = sslcert.cpp sslconnection.cpp sslcontext.cpp \
sslengine.cpp sslerror.cpp sslocspstapling.cpp sslsesscache.cpp sslticket.cpp ocsp/ocsp.c

####### kdevelop will overwrite this part!!! (end)############
