####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblsiapi.a

AM_CPPFLAGS =  -I$(top_srcdir)/openssl/include/ -I$(top_srcdir)/include -I$(top_srcdir)/src

liblsiapi_a_METASOURCES = AUTO

liblsiapi_a_SOURCES = ediohandler.cpp lsiapi.cpp lsimoduledata.cpp lsiapihooks.cpp modulehandler.cpp modulemanager.cpp lsiapilib.cpp lsiapigd.cpp envmanager.cpp \
moduletimer.cpp

