####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libmain.a

AM_CPPFLAGS =  -I$(top_srcdir)/openssl/include/ -I$(top_srcdir)/include -I$(top_srcdir)/src

libmain_a_METASOURCES = AUTO

libmain_a_SOURCES = mainserverconfig.cpp lshttpdmain.cpp serverinfo.cpp httpconfigloader.cpp \
	httpserver.cpp plainconf.cpp configctx.cpp

####### kdevelop will overwrite this part!!! (end)############
