noinst_LIBRARIES = libspdy.a
AM_CPPFLAGS =  -I$(top_srcdir)/openssl/include/ -I$(top_srcdir)/include -I$(top_srcdir)/src
libspdy_a_METASOURCES = AUTO

libspdy_a_SOURCES = spdyprotocol.cpp spdyconnection.cpp spdystream.cpp \
		spdyzlibfilter.cpp spdystreampool.cpp h2connection.cpp \
		h2protocol.cpp h2stream.cpp hpack.cpp

noinst_HEADERS = 
